--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,7 +11,7 @@ env:
 phases:
   install:
     runtime-versions:
-      java: corretto17  # ONLY include Java here; Docker doesn't belong here
+      java: corretto17
     commands:
       - echo Installing Maven...
       - yum install -y maven docker
@@ -26,6 +26,8 @@ phases:
       - echo Building JAR inside app-tier...
       - cd app-tier
       - mvn clean package -DskipTests
+      - echo Running SonarQube analysis...
+      - mvn clean verify sonar:sonar -Dsonar.projectKey=TODO -Dsonar.host.url=http://3.83.232.209 -Dsonar.login=sqp_9aef180c6bef97fc3f3a94b811ec6ae0e54dbb06
       - echo Building Docker image...
       - docker build -t $REPO_NAME:$IMAGE_TAG .
       - docker tag $REPO_NAME:$IMAGE_TAG $IMAGE_URI
