--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
         - name: todo-app
-          image: 216989142685.dkr.ecr.us-east-1.amazonaws.com/test:latest1
-          imagePullPolicy: Always  # <-- This ensures the image is pulled every time
+          image: IMAGE_PLACEHOLDER
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           env:
