--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,8 +13,12 @@ phases:
     runtime-versions:
       java: corretto17
     commands:
-      - echo Installing Maven...
+      - echo Installing Maven and Docker...
       - yum install -y maven docker
+      - curl -LO "https://dl.k8s.io/release/$(curl -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      - install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+      - echo Configuring kubeconfig...
+      - aws eks update-kubeconfig --region $REGION --name MyEKSCluster
 
   pre_build:
     commands:
@@ -41,7 +45,12 @@ phases:
       - mkdir -p k8s-out
       - sed "s|IMAGE_PLACEHOLDER|$IMAGE_URI|g" k8s/deployment.yaml > k8s-out/deployment.yaml
       - cp k8s/service.yaml k8s-out/service.yaml
-      - echo Done preparing artifacts.
+      - echo Applying manifests to EKS...
+      - kubectl apply -f k8s-out/deployment.yaml
+      - kubectl apply -f k8s-out/service.yaml
+      - echo Restarting deployment to force new image pull...
+      - kubectl rollout restart deployment todo-app
+      - echo Deployment complete.
 
 artifacts:
   base-directory: k8s-out
