--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,11 +15,12 @@ phases:
     commands:
       - echo Installing Maven and Docker...
       - yum install -y maven docker
-      - KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt)
-      - curl -LO https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl
-      - chmod +x kubectl
-      - mv kubectl /usr/local/bin/
-      - install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+      - echo Installing kubectl...
+      - |
+        KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt)
+        curl -LO https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl
+        chmod +x kubectl
+        mv kubectl /usr/local/bin/kubectl
       - echo Configuring kubeconfig...
       - aws eks update-kubeconfig --region $REGION --name MyEKSCluster
 
@@ -53,7 +54,7 @@ phases:
       - kubectl apply -f k8s-out/service.yaml
       - echo Restarting deployment to force new image pull...
       - kubectl rollout restart deployment todo-app
-      - echo Deployment complete.
+      - echo ✅ Deployment complete.
 
 artifacts:
   base-directory: k8s-out
