--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,20 +10,19 @@ env:
 
 phases:
   install:
-  runtime-versions:
-    java: corretto17
-  commands:
-    - echo Installing Maven and Docker...
-    - yum install -y maven docker
-    - echo Installing kubectl...
-    - |
-      KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt)
-      curl -LO https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl
-      chmod +x kubectl
-      mv kubectl /usr/local/bin/kubectl
-    - echo Configuring kubeconfig...
-    - aws eks update-kubeconfig --region $REGION --name MyEKSCluster
-
+    runtime-versions:
+      java: corretto17
+    commands:
+      - echo Installing Maven and Docker...
+      - yum install -y maven docker
+      - echo Installing kubectl...
+      - |
+        KUBECTL_VERSION=$(curl -s https://dl.k8s.io/release/stable.txt)
+        curl -LO https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl
+        chmod +x kubectl
+        mv kubectl /usr/local/bin/kubectl
+      - echo Configuring kubeconfig...
+      - aws eks update-kubeconfig --region $REGION --name MyEKSCluster
 
   pre_build:
     commands:
@@ -53,7 +52,7 @@ phases:
       - echo Applying manifests to EKS...
       - kubectl apply -f k8s-out/deployment.yaml
       - kubectl apply -f k8s-out/service.yaml
-      - echo Restarting deployment to force new image pull...
+      - echo Restarting deployment to ensure image is refreshed...
       - kubectl rollout restart deployment todo-app
       - echo ✅ Deployment complete.
 
