--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: todo-app
-          image: 216989142685.dkr.ecr.us-east-1.amazonaws.com/test:latest2
+          image: image_url
           imagePullPolicy: Always  # <-- This ensures the image is pulled every time
           ports:
             - containerPort: 80
