--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,9 +4,10 @@ env:
   variables:
     ACCOUNT_ID: 216989142685
     REGION: us-east-1
-    REPO_NAME: test
-    IMAGE_TAG: latest2
-    IMAGE_URI: 216989142685.dkr.ecr.us-east-1.amazonaws.com/test:latest2
+    #REPO_NAME: test
+    # IMAGE_TAG: latest2
+    # IMAGE_URI: 216989142685.dkr.ecr.us-east-1.amazonaws.com/test:latest2
+    IMAGE_REPO: test
 
 phases:
   install:
@@ -15,6 +16,7 @@ phases:
     commands:
       - echo Installing Maven...
       - yum install -y maven docker
+      - export IMAGE_TAG=v1.${CODEBUILD_BUILD_NUMBER}
 
   pre_build:
     commands:
@@ -28,18 +30,23 @@ phases:
       - mvn clean package -DskipTests
       - echo Running SonarQube analysis...
       - mvn clean verify sonar:sonar -Dsonar.projectKey=TODO -Dsonar.host.url=http://54.165.220.18 -Dsonar.login=sqp_9aef180c6bef97fc3f3a94b811ec6ae0e54dbb06
-      - echo Building Docker image...
-      - docker build -t $REPO_NAME:$IMAGE_TAG .
-      - docker tag $REPO_NAME:$IMAGE_TAG $IMAGE_URI
-      - cd ..
+      # - echo Building Docker image...
+      # - docker build -t $REPO_NAME:$IMAGE_TAG .
+      # - docker tag $REPO_NAME:$IMAGE_TAG $IMAGE_URI
+      # - cd ..
+        - echo "Building and tagging ..."
+        - cd app-tier/
+        - docker build -t "${IMAGE_REPO}:${IMAGE_TAG}" .
+        - docker tag "${IMAGE_REPO}:${IMAGE_TAG}" "${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${IMAGE_REPO}:${IMAGE_TAG}"
+        - cd -
 
   post_build:
     commands:
       - echo Pushing image to Amazon ECR...
-      - docker push $IMAGE_URI
+      - docker push ${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${IMAGE_REPO}:${IMAGE_TAG}
       - echo Preparing Kubernetes manifests...
       - mkdir -p k8s-out
-      - sed "s|IMAGE_PLACEHOLDER|$IMAGE_URI|g" k8s/deployment.yaml > k8s-out/deployment.yaml
+      - sed "s|image_url|${ACCOUNT_ID}.dkr.ecr.${REGION}.amazonaws.com/${IMAGE_REPO}:${IMAGE_TAG}|g" k8s/deployment.yaml > k8s-out/deployment.yaml
       - cp k8s/service.yaml k8s-out/service.yaml
       - echo Done preparing artifacts.
 
